--- a/story.html
+++ b/story.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
   <article>
   <h4>OPEN THREADS</h4>
   <h1>Ranking the Spurs starting five</h1>
   <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
-  <p class="byline">By Jeph Duarte <a href="https://x.com/jeph_duarte?lang=en">@jeph_duarte</a> | <span>Aug 5, 2018, 6:00am CDT</span></p>
+  <p class="byline">By <a href="https://x.com/jeph_duarte?lang=en">Jeph Duarte</a> | <span>Aug 5, 2018, 6:00am CDT</span></p>
 
 
     <figure>
